--- a/resources/assets/main/sass/_ideaing.scss
+++ b/resources/assets/main/sass/_ideaing.scss
@@ -6928,6 +6928,9 @@ footer.about-footer{
     border-radius: 20px;
 }
 .room-landing{
+   .hero-tags{
+     z-index: 10;
+   }
   .rsContent{
     overflow: visible;
   }
